--- a/templates/Pages/pubs.html.twig
+++ b/templates/Pages/pubs.html.twig
@@ -11,20 +11,20 @@
         <div class="row">
             <div class="col-lg-10 mx-auto">
 
+                {% for pub in pubs %}
                 <!-- List group-->
                 <ul class="list-group">
-
                     <!-- list group item-->
                     <li class="list-group-item mb-2 shadow">
                         <!-- Custom content-->
                         <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                             <div class="media-body order-2 order-lg-1">
-                                <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Rifle</h5>
+                                <h5 class="mt-0 font-weight-bold mb-2 pt-3">{{ pub.name }}</h5>
                                 <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit. Suscipit fuga autem maiores necessitatibus. adipisicing elit.
                                     Suscipit fuga autem maiores necessitatibus</p>
                                 <div class="d-flex align-items-center justify-content-between mt-1">
-                                    <h6 class="font-weight-bold my-2">Sutton In Ashfield</h6>
+                                    <h6 class="font-weight-bold my-2">{{ pub.town }}</h6>
                                     <ul class="list-inline small">
                                         <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
                                         <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
@@ -35,120 +35,16 @@
                                 </div>
                                 <a class="small" href="#">Get directions</a>
                             </div>
-                            <img src="https://media-cdn.tripadvisor.com/media/photo-s/0d/92/1a/cb/the-cluricaune-irish.jpg"
+                            <img src="{{ pub.image }}"
                                  alt="Generic placeholder image" width="200" class="ml-lg-5 order-1 order-lg-2">
                         </div>
                         <!-- End -->
                     </li>
                     <!-- End -->
-
-                    <!-- list group item-->
-                    <li class="list-group-item mb-2 shadow">
-                        <!-- Custom content-->
-                        <div class="media align-items-lg-center flex-column flex-lg-row p-3">
-                            <div class="media-body order-2 order-lg-1">
-                                <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Maypole</h5>
-                                <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit. Suscipit fuga autem maiores necessitatibus.</p>
-                                <div class="d-flex align-items-center justify-content-between mt-1">
-                                    <h6 class="font-weight-bold my-2">Sutton In Ashfield</h6>
-                                    <ul class="list-inline small">
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                    </ul>
-                                </div>
-                                <a class="small" href="#">Get directions</a>
-                            </div>
-                            <img src="https://media-cdn.tripadvisor.com/media/photo-s/0d/92/1a/cb/the-cluricaune-irish.jpg"
-                                 alt="Generic placeholder image" width="200" class="ml-lg-5 order-1 order-lg-2">
-                        </div>
-                        <!-- End -->
-                    </li>
-                    <!-- End -->
-
-                    <!-- list group item -->
-                    <li class="list-group-item mb-2 shadow">
-                        <!-- Custom content-->
-                        <div class="media align-items-lg-center flex-column flex-lg-row p-3">
-                            <div class="media-body order-2 order-lg-1">
-                                <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Fox and Crown</h5>
-                                <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit. Suscipit fuga autem maiores necessitatibus.</p>
-                                <div class="d-flex align-items-center justify-content-between mt-1">
-                                    <h6 class="font-weight-bold my-2">Sutton In Ashfield</h6>
-                                    <ul class="list-inline small">
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star-o text-gray"></i></li>
-                                    </ul>
-                                </div>
-                                <a class="small" href="#">Get directions</a>
-                            </div>
-                            <img src="https://media-cdn.tripadvisor.com/media/photo-s/0d/92/1a/cb/the-cluricaune-irish.jpg"
-                                 alt="Generic placeholder image" width="200" class="ml-lg-5 order-1 order-lg-2">
-                        </div>
-                        <!-- End -->
-                    </li>
-                    <!-- End -->
-
-                    <!-- list group item -->
-                    <li class="list-group-item mb-2 shadow">
-                        <!-- Custom content-->
-                        <div class="media align-items-lg-center flex-column flex-lg-row p-3">
-                            <div class="media-body order-2 order-lg-1">
-                                <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Tavern</h5>
-                                <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit. Suscipit fuga autem maiores necessitatibus.</p>
-                                <div class="d-flex align-items-center justify-content-between mt-1">
-                                    <h6 class="font-weight-bold my-2">Sutton In Ashfield</h6>
-                                    <ul class="list-inline small">
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                    </ul>
-                                </div>
-                                <a class="small" href="#">Get directions</a>
-                            </div>
-                            <img src="https://media-cdn.tripadvisor.com/media/photo-s/0d/92/1a/cb/the-cluricaune-irish.jpg"
-                                 alt="Generic placeholder image" width="200" class="ml-lg-5 order-1 order-lg-2">
-                        </div>
-                        <!-- End -->
-                    </li>
-                    <li class="list-group-item mb-2 shadow">
-                        <!-- Custom content-->
-                        <div class="media align-items-lg-center flex-column flex-lg-row p-3">
-                            <div class="media-body order-2 order-lg-1">
-                                <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Hut</h5>
-                                <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit. Suscipit fuga autem maiores necessitatibus.</p>
-                                <div class="d-flex align-items-center justify-content-between mt-1">
-                                    <h6 class="font-weight-bold my-2">Ravenshead</h6>
-                                    <ul class="list-inline small">
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                    </ul>
-                                </div>
-                                <a class="small" href="#">Get directions</a>
-                            </div>
-                            <img src="https://media-cdn.tripadvisor.com/media/photo-s/0d/92/1a/cb/the-cluricaune-irish.jpg"
-                                 alt="Generic placeholder image" width="200" class="ml-lg-5 order-1 order-lg-2">
-                        </div>
-                        <!-- End -->
-                    </li>
-                    <!-- End -->
-
                 </ul>
                 <!-- End -->
+                {% endfor %}
+
             </div>
         </div>
     </div>
